Removed JavaWarnings, SonarLint-Warnings